# online-cinema

./: .gitignore  .isort.cfg  README.md  pyproject.toml
backup/admin/: movies_database.sql
backup/elastic/: dump.json  es_bulk_converter.py  initial-dump.json
deploy/admin/: README.md  docker-compose.local.yml  docker-compose.nginx.yml
deploy/admin/configs/: admin-nginx.conf
deploy/admin/envs/: .db.env.example  .service.env.example
deploy/api/: README.md
deploy/api/configs/: api-nginx.conf
deploy/api/local/: docker-compose.local.yml
deploy/api/test/: docker-compose.test.yml
deploy/auth/: README.md
deploy/auth/configs/: auth-nginx.conf
deploy/auth/local/: docker-compose.local.yml
deploy/auth/test/: docker-compose.test.yml
deploy/etl/: README.md  docker-compose.elastic.yml  docker-compose.local.yml
deploy/etl/envs/: .elastic.env.example  .etl.env.example  .redis.env.example
deploy/events_api/: README.md  docker-compose.local.yml
deploy/events_api/envs/: .common.kafka.env.example  .node0.kafka.env.example  .node1.kafka.env.example  .node2.kafka.env.example  .service.env.example  .ui.kafka.env.example
deploy/events_etl/: README.md  docker-compose.local.yml
deploy/events_etl/envs/: .clickhouse.env.example  .etl.env.example
deploy/init/elasticsearch/: entrypoint.sh  genres_schema.json  movies_schema.json
deploy/init/nginx/: nginx.conf
docs/diagrams/src/: ContainerDiagramAsIs.plantuml  ContainerDiagramToBe.plantuml
init/elasticsearch/: dump.json  entrypoint.sh  movies_schema.json  persons_schema.json
init/elasticsearch/utils/: es_bulk_converter.py
init/nginx/: entrypoint.sh  nginx.conf
init/redis/: entrypoint.sh
services/admin/: README.md
services/admin/src/: .dockerignore  Dockerfile  openapi.yaml  requirements.txt  run_uwsgi.sh
services/admin/tests/: postman_tests.json
services/api/: README.md  docker-compose.yml  site.conf
services/api/envs/: .elastic.env.example  (+1 more)
services/auth/: CHANGELOG.md  README.md  docker-compose.yaml
services/etl/: README.md
services/events_api/: README.md  events.postman_collection.json
services/events_etl/: README.md
tests/functional/: conftest.py
(+210 files in other folders)
