[project]
name = "dev-tools"
version = "0.0.0"
description = "Development tools"
requires-python = ">=3.10"

[project.optional-dependencies]
lint = [
    "pydantic-settings==2.8.1",
    "ruff==0.11.6",
    "mypy==1.15.0",
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
strict = true

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
